placed everything in app

--- a/www/callback.html
+++ b/www/callback.html
@@ -29,7 +29,7 @@
 <!-- 'ng-app' - angular module binding -->
 <!-- 'ng-controller' - angular controller binding -->
 
-<body ng-app="starter" ng-controller="Callback as vm">
+<body ng-app="starter" ng-controller="CallbackController as vm">
     
 
 
