--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,8 @@
   <!-- your app's js -->
   <script src="js/app.js"></script>
 
-  <script src="js/MainController.js"></script>
+
+
 
 
 
@@ -39,7 +40,7 @@
         <ion-content>
             <div>
                 <h2>Step 1) Login into OneDrive</H2>
-                <button class="button" ng-click="oneDrive_login()">OneDrive Login</button>
+                <button class="button" ng-click="vm.oneDrive_login()">OneDrive Login</button>
             </div>
         
             <div>
@@ -55,8 +56,8 @@
             </div>
             <div id="step3">
                 <h2>Step 3) Tada your file</h2>
-                <h4 id="file_header"></h4>
-                <p id="file_contents"></p>
+                <h4 id="file_header" >{{vm.file_header}}</h4>
+                <p id="file_contents" >{{vm.file_contents}}</p>
             </div>
         </ion-content>
       </ion-pane>
