Services and controller split into files

--- a/www/index.html
+++ b/www/index.html
@@ -21,11 +21,15 @@
 
   <!-- your app's js -->
   <script src="js/app.js"></script>
+  
+  <!-- odauth Service-->
+  <script src="js/odauthService.js"></script>
 
+  <!--Main Controller-->
+  <script src="js/MainController.js"></script>
 
-
-
-
+  <!--Callback Controller-->
+  <script src="js/CallbackController.js"></script>
 
 </head>
 
