--- a/www/callback.html
+++ b/www/callback.html
@@ -19,8 +19,17 @@
 
   
 
-  <!-- your app's js -->
-  <script src="js/app.js"></script>
+   <!-- your app's js -->
+   <script src="js/app.js"></script>
+  
+   <!-- odauth Service-->
+   <script src="js/odauthService.js"></script>
+ 
+   <!--Main Controller-->
+   <script src="js/MainController.js"></script>
+ 
+   <!--Callback Controller-->
+   <script src="js/CallbackController.js"></script>
 
 
 
